# ffng-android

./: .cproject  .project  AndroidManifest.xml  Makefile  README.txt
assets/: filelist.txt
jni/: Android.mk  Application.mk  FFNGApp.cpp  FFNGApp.h  FFNGFiles.cpp  FFNGFiles.h  FFNGFont.cpp  FFNGFont.h  FFNGInputEvent.cpp  FFNGInputEvent.h  FFNGMusic.cpp  FFNGMusic.h  FFNGSurface.cpp  FFNGSurface.h  FFNGTypes.h  FFNGVideo.cpp  FFNGVideo.h  jni.cpp  jni.h
jni/ff/effect/: Color.h  EffectDisintegrate.cpp  EffectDisintegrate.h  EffectInvisible.h  EffectMirror.cpp  EffectMirror.h  EffectNone.cpp  EffectNone.h  EffectReverse.cpp  EffectReverse.h  EffectZx.cpp  EffectZx.h  Font.cpp  Font.h  LayeredPicture.cpp  LayeredPicture.h  Makefile.am  Makefile.in  Outline.cpp  Outline.h  Picture.cpp  Picture.h  PixelIterator.cppx  PixelIterator.hx  PixelTool.cpp  PixelTool.h  ResColorPack.h  SurfaceLock.cpp  SurfaceLock.h  SurfaceTool.cpp  SurfaceTool.h  TTFException.cpp  TTFException.h  ViewEffect.h  WavyPicture.cpp  WavyPicture.h
jni/ff/game/: Application.cpp  Application.h  GameAgent.cpp  GameAgent.h  Makefile.am  Makefile.in  fillets.rc  main.cppx
jni/ff/gengine/: AgentPack.cpp  AgentPack.h  BaseAgent.cpp  BaseAgent.h  BaseException.cpp  BaseException.h  BaseListener.cpp  BaseListener.h  BaseMsg.cpp  BaseMsg.h  Dialog.cpp  Dialog.h  DialogStack.cpp  DialogStack.h  Drawable.h  DummySoundAgent.h  Environ.cpp  Environ.h  ExInfo.cpp  ExInfo.h  FsPath.cpp  FsPath.h  FsPath_boost.cppx  HelpException.h  INamed.h  ImgException.cpp  ImgException.h  InputAgent.cpp  InputAgent.h  InputHandler.cpp  InputHandler.h  InputProvider.h  IntMsg.cpp  IntMsg.h  KeyBinder.cpp  KeyBinder.h  KeyStroke.cpp  KeyStroke.h  Log.cpp  Log.h  (+66 more)
jni/ff/level/: Anim.cpp  Anim.h  ControlSym.h  Controls.cpp  Controls.h  CountAdvisor.h  Cube.cpp  Cube.h  Decor.h  DescFinder.h  Dir.cpp  Dir.h  Field.cpp  Field.h  FinderAlg.cpp  FinderAlg.h  FinderField.cpp  FinderField.h  FinderPlace.h  Goal.cpp  Goal.h  KeyControl.cpp  KeyControl.h  Landslip.cpp  Landslip.h  LayoutException.h  Level.cpp  Level.h  LevelCountDown.cpp  LevelCountDown.h  LevelInput.cpp  LevelInput.h  LevelLoading.cpp  LevelLoading.h  LevelScript.cpp  LevelScript.h  LevelStatus.cpp  LevelStatus.h  LoadException.h  Makefile.am  (+40 more)
jni/ff/menu/: LevelDesc.cpp  LevelDesc.h  LevelNode.cpp  LevelNode.h  Makefile.am  Makefile.in  NodeDrawer.cpp  NodeDrawer.h  PedoInput.cpp  PedoInput.h  Pedometer.cpp  Pedometer.h  SolverDrawer.cpp  SolverDrawer.h  WorldBranch.cpp  WorldBranch.h  WorldInput.cpp  WorldInput.h  WorldMap.cpp  WorldMap.h  worldmap-script.cpp  worldmap-script.h
jni/ff/option/: HelpInput.cpp  HelpInput.h  Makefile.am  Makefile.in  MenuHelp.cpp  MenuHelp.h  MenuOptions.cpp  MenuOptions.h  OptionsInput.cpp  OptionsInput.h  RadioBox.cpp  RadioBox.h  SelectLang.cpp  SelectLang.h
jni/ff/plan/: Command.h  CommandQueue.cpp  CommandQueue.h  ConsoleInput.cpp  ConsoleInput.h  FishDialog.cpp  FishDialog.h  GameState.cpp  GameState.h  KeyConsole.cpp  KeyConsole.h  KeyDesc.cpp  KeyDesc.h  Keymap.cpp  Keymap.h  Makefile.am  Makefile.in  Planner.cpp  Planner.h  ScriptCmd.cpp  ScriptCmd.h  StateInput.cpp  StateInput.h  StateManager.cpp  StateManager.h  SubTitleAgent.cpp  SubTitleAgent.h  Title.cpp  Title.h  dialog-script.cpp  dialog-script.h
jni/ff/state/: DemoInput.cpp  DemoInput.h  DemoMode.cpp  DemoMode.h  GameInput.cpp  GameInput.h  Makefile.am  Makefile.in  MovieState.cpp  MovieState.h  PosterScroller.cpp  PosterScroller.h  PosterState.cpp  PosterState.h  SDL_Movie.h  demo-script.cpp  demo-script.h
jni/ff/widget/: HBox.cpp  HBox.h  IWidget.cpp  IWidget.h  Labels.cpp  Labels.h  Makefile.am  Makefile.in  Slider.cpp  Slider.h  VBox.cpp  VBox.h  WiBox.cpp  WiBox.h  WiButton.cpp  WiButton.h  WiContainer.cpp  WiContainer.h  WiLabel.cpp  WiLabel.h  WiPara.cpp  WiPara.h  WiPicture.cpp  WiPicture.h  WiSpace.h  WiStatusBar.cpp  WiStatusBar.h
jni/lua/: Android.mk  lauxlib.h  lua.h  lualib.h
res/values/: strings.xml
src/com/badlogic/gdx/audio/: Music.java  Sound.java
src/com/badlogic/gdx/backends/android/: AndroidFileHandle.java  AndroidSound.java
src/com/badlogic/gdx/files/: FileHandle.java
src/cz/ger/ffng/: ActiveFishControl.java  Controls.java  FFNG.java  FFNGApp.java  FFNGFiles.java  FFNGFont.java  FFNGInputEvent.java  FFNGMusic.java  FFNGSound.java  FFNGSurface.java
