
INCLUDES = -I@top_srcdir@/src/gengine $(SDL_CFLAGS) $(LUA_CFLAGS) $(BOOST_CFLAGS) $(FRIBIDI_CFLAGS)

noinst_LIBRARIES = libeffect.a

libeffect_a_SOURCES = Color.h EffectDisintegrate.cpp EffectDisintegrate.h EffectInvisible.h EffectMirror.cpp EffectMirror.h EffectNone.cpp EffectNone.h EffectReverse.cpp EffectReverse.h EffectZx.cpp EffectZx.h Font.cpp Font.h LayeredPicture.cpp LayeredPicture.h Outline.cpp Outline.h Picture.cpp Picture.h PixelTool.cpp PixelTool.h ResColorPack.h SurfaceLock.cpp SurfaceLock.h TTFException.cpp TTFException.h ViewEffect.h WavyPicture.cpp WavyPicture.h SurfaceTool.cpp SurfaceTool.h PixelIterator.cpp PixelIterator.h
