
INCLUDES = -I@top_srcdir@/src/gengine -I@top_srcdir@/src/effect $(SDL_CFLAGS) $(LUA_CFLAGS) $(BOOST_CFLAGS) $(FRIBIDI_CFLAGS)

noinst_LIBRARIES = libplan.a

libplan_a_SOURCES = Command.h CommandQueue.cpp CommandQueue.h ConsoleInput.cpp ConsoleInput.h FishDialog.cpp FishDialog.h GameState.cpp GameState.h KeyConsole.cpp KeyConsole.h KeyDesc.cpp KeyDesc.h Keymap.cpp Keymap.h Planner.cpp Planner.h ScriptCmd.cpp ScriptCmd.h StateInput.cpp StateInput.h StateManager.cpp StateManager.h SubTitleAgent.cpp SubTitleAgent.h Title.cpp Title.h dialog-script.cpp dialog-script.h
