
INCLUDES = -I@top_srcdir@/src/gengine -I@top_srcdir@/src/effect -I@top_srcdir@/src/widget -I@top_srcdir@/src/plan -I@top_srcdir@/src/option $(SDL_CFLAGS) $(LUA_CFLAGS) $(BOOST_CFLAGS) $(FRIBIDI_CFLAGS)

noinst_LIBRARIES = libstate.a

libstate_a_SOURCES = DemoInput.cpp DemoInput.h DemoMode.cpp DemoMode.h GameInput.cpp GameInput.h PosterState.cpp PosterState.h PosterScroller.cpp PosterScroller.h MovieState.cpp MovieState.h SDL_Movie.h demo-script.cpp demo-script.h

